--- a/index.html
+++ b/index.html
@@ -281,7 +281,8 @@
                         </div>
                         <ul>
                             <li>
-                                Created and maintained ETL and ELT pipelines and dashboards of 40+ Amazon brands that generated
+                                Created and maintained ETL and ELT pipelines and dashboards of 40+ Amazon brands that
+                                generated
                                 250+ M dollars of revenue in
                                 2022 using pandas, Snowflake, Airflow, PySpark, data build tool, Selenium, AWS, Docker,
                                 and Tableau
@@ -292,7 +293,8 @@
                                 to improve the decision making process
                             </li>
                             <li>
-                                Built a complete Python repository for ETL/ELT jobs and REST API communication with the best software development practices
+                                Built a complete Python repository for ETL/ELT jobs and REST API communication with the
+                                best software development practices
                             </li>
                         </ul>
                     </div>
@@ -716,6 +718,14 @@
                     <div class="tab-pane container active" id="MobileWebApp">
                         <ul class="fa-ul mb-0 mt-3">
                             <li class="mb-2">
+                                <a href="https://words-de.herokuapp.com/swagger/" target="_blank" class="text-danger">
+                                    <span class="fa-li"><i class="fas fa-code text-warning"></i></span>German
+                                    Words API &#183;
+                                    A customizable API to efficiently practice German words of different levels in their contexts.&nbsp;
+                                    <i class="fas fa-link"></i>
+                                </a>
+                            </li>
+                            <li class="mb-2">
                                 <a href="https://github.com/gasci/german/" target="_blank" class="text-danger">
                                     <span class="fa-li"><i class="fas fa-code text-warning"></i></span>German
                                     Words &#183;
@@ -829,10 +839,11 @@
                 <h6 class="mt-3">Online Courses</h6>
                 <ul class="fa-ul mb-0">
                     <li>
-                        <a href="https://www.udemy.com/certificate/UC-1048bee0-bdc6-4e7f-b265-48e71d2ed42d/" target="_blank"
-                            class="text-danger">
+                        <a href="https://www.udemy.com/certificate/UC-1048bee0-bdc6-4e7f-b265-48e71d2ed42d/"
+                            target="_blank" class="text-danger">
                             <span class="fa-li"><i class="fas fa-certificate text-warning"></i></span> Udemy &#183;
-                            Azure Databricks & Spark Core For Data Engineers (Python/SQL)&nbsp;<i class="fas fa-link"></i>
+                            Azure Databricks & Spark Core For Data Engineers (Python/SQL)&nbsp;<i
+                                class="fas fa-link"></i>
                         </a>
                     </li>
 
@@ -899,7 +910,7 @@
                             Supervised Learning with Scikit-learn&nbsp;<i class="fas fa-link"></i>
                         </a>
                     </li>
-                    
+
                     <li>
                         <a href="https://www.udemy.com/certificate/UC-3X4NQN1M/" target="_blank" class="text-danger">
                             <span class="fa-li"><i class="fas fa-certificate text-warning"></i></span> Udemy &#183; MBA
@@ -919,20 +930,22 @@
                         </a>
                     </li>
                     <li>
-                        <a href="https://www.sololearn.com/Certificate/1094-1874014/jpg/" target="_blank" class="text-danger">
+                        <a href="https://www.sololearn.com/Certificate/1094-1874014/jpg/" target="_blank"
+                            class="text-danger">
                             <span class="fa-li"><i class="fas fa-certificate text-warning"></i></span> SoloLearn &#183;
                             Machine Learning&nbsp;<i class="fas fa-link"></i>
                         </a>
                     </li>
                     <li>
-                        <a href="https://www.sololearn.com/Certificate/1093-1874014/jpg/" target="_blank" class="text-danger">
+                        <a href="https://www.sololearn.com/Certificate/1093-1874014/jpg/" target="_blank"
+                            class="text-danger">
                             <span class="fa-li"><i class="fas fa-certificate text-warning"></i></span> SoloLearn &#183;
                             Data Science with Python&nbsp;<i class="fas fa-link"></i>
                         </a>
                     </li>
                     <li>
-                        <a href="https://www.sololearn.com/certificates/course/en/1874014/1068/landscape/png" target="_blank"
-                            class="text-danger">
+                        <a href="https://www.sololearn.com/certificates/course/en/1874014/1068/landscape/png"
+                            target="_blank" class="text-danger">
                             <span class="fa-li"><i class="fas fa-certificate text-warning"></i></span> SoloLearn &#183;
                             Java&nbsp;<i class="fas fa-link"></i>
                         </a>
