--- a/index.html
+++ b/index.html
@@ -721,7 +721,7 @@
                                 <a href="https://words-de.herokuapp.com/swagger/" target="_blank" class="text-danger">
                                     <span class="fa-li"><i class="fas fa-code text-warning"></i></span>German
                                     Words API &#183;
-                                    A customizable API to efficiently practice German words of different levels in their contexts.&nbsp;
+                                    A customizable Django Rest API to efficiently practice German words of different levels in their contexts.&nbsp;
                                     <i class="fas fa-link"></i>
                                 </a>
                             </li>
