update tech list

--- a/index.html
+++ b/index.html
@@ -474,19 +474,19 @@
 
                         <h6 class="mt-3">Data Science & Big Data</h6>
                         <ul>
-                            <li>pandas</li>
-                            <li>NumPy</li>
-                            <li>Matplotlib</li>
                             <li>Apache Airflow</li>
-                            <li>Apache Spark (Scala & PySpark)</li>
+                            <li>Apache Spark (PySpark)</li>
                             <li>Apache Kafka (Python)</li>
-                            <li>Apache Hadoop</li>
-                            <li>Seaborn</li>
-                            <li>scikit-learn</li>
+                            <li>dbt</li>
+                            <!-- <li>Apache Hadoop</li> -->
                             <li>Keras</li>
+                            <li>scikit-learn</li>
+                            <li>pandas</li>
+                            <li>Seaborn</li>
+                            <li>Matplotlib</li>
+                            <li>NumPy</li>
                             <li>Tableau</li>
-                            <!-- <li>Apache HBase</li> -->
-                            <li>R</li>
+                            <!-- <li>R</li> -->
                         </ul>
 
                         <h6>Back-End Development & DevOps</h6>
@@ -494,27 +494,31 @@
                             <li>Python</li>
                             <li>SQL</li>
                             <li>Bash Scripting</li>
+                            <li>AWS S3, RDS, EC2, ECS, Lambda</li>
+                            <li>GitHub Actions</li>
+                            <li>MongoDB</li>
+                            <li>PostgreSQL</li>
                             <li>Django</li>
                             <li>Flask</li>
-                            <li>AWS S3, RDS, EC2, Lambda</li>
+                            <li>pytest</li>
                             <li>Docker</li>
                             <li>Kubernetes</li>
                             <li>Django Rest Framework</li>
                             <li>Heroku</li>
-                            <li>MongoDB</li>
                         </ul>
 
                         <h6>Front-End Development</h6>
                         <ul>
+                            <li>Vue.js</li>
                             <li>JavaScript</li>
                             <li>TypeScript</li>
                             <li>Apache Cordova</li>
-                            <li>Electron</li>
-                            <li>Vue.js</li>
+                            <li>Vuetify</li>
                             <li>Bootstrap</li>
-                            <li>Materialize.css</li>
+                            <!-- <li>Materialize.css</li> -->
                             <li>Bulma</li>
-                            <li>Buefy.js</li>
+                            <li>Electron</li>
+                            <!-- <li>Buefy.js</li> -->
                             <li>Adobe XD</li>
                         </ul>
 
@@ -525,10 +529,11 @@
 
                         <h6 class="mt-3">Product Development</h6>
                         <ul>
-                            <li>Git</li>
+                            <li>GitHub</li>
                             <li>Atlassian JIRA/Confluence</li>
-                            <li>Google Firebase Analytics</li>
-                            <li>Google Firebase Cloud Messaging</li>
+                            <li>Asana</li>
+                            <li>Google Analytics</li>
+                            <li>Google Firebase</li>
                             <li>Scrum</li>
                             <!-- <li>Google Ads/Admob/Adsense</li> -->
                         </ul>
