--- a/index.html
+++ b/index.html
@@ -723,10 +723,23 @@
                     <div class="tab-pane container active" id="MobileWebApp">
                         <ul class="fa-ul mb-0 mt-3">
                             <li class="mb-2">
+                                Cardly: Learn German Smartly&nbsp;&#183;
+                                <a href="https://apps.apple.com/tr/app/cardly-learn-german-smartly/id1624501914?platform=iphone"
+                                    target="_blank" class="text-danger">
+                                    <span class="fa-li"><i class="fas fa-code text-warning"></i></span>
+                                    iOS App
+                                    <i class="fas fa-link"></i>
+                                </a>&#183;
+                                <a href="https://play.google.com/store/apps/details?id=com.mealdoc.cardly&hl=en&gl=US"
+                                    target="_blank" class="text-danger">
+                                    <span class="fa-li"><i class="fas fa-code text-warning"></i></span>
+                                    Android App
+                                    <i class="fas fa-link"></i>
+                                </a>
+                                &#183;
                                 <a href="https://words-de.herokuapp.com/swagger/" target="_blank" class="text-danger">
-                                    <span class="fa-li"><i class="fas fa-code text-warning"></i></span>German
-                                    Words API &#183;
-                                    A customizable Django Rest API to efficiently practice German words of different levels in their contexts.&nbsp;
+                                    <span class="fa-li"><i class="fas fa-code text-warning"></i></span>
+                                    Back-End API
                                     <i class="fas fa-link"></i>
                                 </a>
                             </li>
