--- a/index.html
+++ b/index.html
@@ -300,7 +300,7 @@
                     </div>
                     <div class="flex-shrink-0 text-right">
                         <span class="text-primary font-weight-bold">Berlin, Germany</span><br />
-                        <span class="text-primary">September 2021 - Present</span>
+                        <span class="text-primary">September 2021 - June 2022</span>
                     </div>
                 </div>
                 <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
