--- a/index.html
+++ b/index.html
@@ -273,10 +273,31 @@
                 <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                     <div class="flex-grow-1">
                         <h4 class="mb-0">
+                            Senior Data Engineer
+                        </h4>
+                        <div class="subheading mb-3">
+                            <a href="https://www.floy.com/" target="_blank" class="text-danger">Floy:
+                                Maximize Human Health&nbsp;<i class="fas fa-link"></i></a>
+                        </div>
+                        <ul>
+                            <li>
+                                Floy develops AI to help radiologists detect rare lesions in medical images. We envision a
+                                future where everybody can access annual holistic health assessments to perven diseases through early-detection.
+                            </li>
+                        </ul>
+                    </div>
+                    <div class="flex-shrink-0 text-right">
+                        <span class="text-primary font-weight-bold">Munich, Germany</span><br />
+                        <span class="text-primary">July 2022 - Present</span>
+                    </div>
+                </div>
+                <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
+                    <div class="flex-grow-1">
+                        <h4 class="mb-0">
                             Data Engineer
                         </h4>
                         <div class="subheading mb-3">
-                            <a href="http://sellerx.com/" target="_blank" class="text-danger">SellerX:
+                            <a href="https://sellerx.com/" target="_blank" class="text-danger">SellerX:
                                 We Buy and Grow Amazon Businesses&nbsp;<i class="fas fa-link"></i></a>
                         </div>
                         <ul>
