--- a/index.html
+++ b/index.html
@@ -281,8 +281,8 @@
                         </div>
                         <ul>
                             <li>
-                                Floy develops AI to help radiologists detect rare lesions in medical images. We envision a
-                                future where everybody can access annual holistic health assessments to perven diseases through early-detection.
+                                Floy develops AI products to help radiologists detect rare lesions in medical images. We envision a
+                                future where everybody can access annual holistic health assessments to prevent diseases through early-detection.
                             </li>
                         </ul>
                     </div>
