--- a/index.html
+++ b/index.html
@@ -282,7 +282,7 @@
                         <ul>
                             <li>
                                 Floy develops AI products to help radiologists detect rare lesions in medical images. We envision a
-                                future where everybody can access annual holistic health assessments to prevent diseases through early-detection.
+                                future where everybody can access annual holistic health assessments to prevent diseases through early detection.
                             </li>
                         </ul>
                     </div>
@@ -1207,11 +1207,9 @@
                     sprint runner and a city biker.
                 </p>
                 <p class="mb-0">
-                    I like reading and writing <a href="siir.html" class="text-danger" target="_blank"
-                        style="text-decoration:underline; font-weight:bold">poetry (Turkish) <i
-                            class="fas fa-link"></i></a>. In addition to this, I spend a substantial amount
+                    I like reading and writing poetry. In addition to this, I spend a substantial amount
                     of my free time exploring the latest technology advancements in the health
-                    care world.
+                    care world. Besides my walls are full of jigsaw puzzles.
                 </p>
                 <h6 class="mt-3">Awards</h6>
                 <ul>
@@ -1231,9 +1229,10 @@
                 <div class="mt-4">
                     <i class="fas fa-3x fa-running social"></i>&nbsp;&#183;&nbsp;<i
                         class="fas fa-3x fa-table-tennis social"></i>&nbsp;&#183;&nbsp;<i
-                        class="fas fa-3x fa-biking social"></i>&nbsp;&#183;&nbsp;<i
-                        class="fas fa-3x fa-pen-alt social"></i>&nbsp;&#183;&nbsp;
-                    <i class="fas fa-3x fa-laptop-medical social"></i>
+                        class="fas fa-3x fa-biking social"></i>&nbsp;&#183;&nbsp;<a href="siir.html" class="text-danger" target="_blank" style="text-decoration:underline; font-weight:bold"><i
+                        class="fas fa-3x fa-pen-alt social"></i></a>&nbsp;&#183;&nbsp;
+                    <i class="fas fa-3x fa-laptop-medical social"></i>&nbsp;&#183;&nbsp;
+                    <i class="fas fa-3x fa-puzzle-piece social"></i>
                 </div>
             </div>
         </section>
