--- a/index.html
+++ b/index.html
@@ -1209,7 +1209,7 @@
                 <p class="mb-0">
                     I like reading and writing poetry. In addition to this, I spend a substantial amount
                     of my free time exploring the latest technology advancements in the health
-                    care world. Besides my walls are full of jigsaw puzzles.
+                    care world. Besides, my walls are full of jigsaw puzzles.
                 </p>
                 <h6 class="mt-3">Awards</h6>
                 <ul>
