--- a/siir.html
+++ b/siir.html
@@ -101,7 +101,7 @@
 <body id="page-top" class="bg-light">
     <!-- Navigation-->
     <nav class="navbar navbar-expand-lg navbar-dark bg-primary fixed-top" id="sideNav">
-        <a class="navbar-brand js-scroll-trigger" href="#page-top">
+        <a class="navbar-brand js-scroll-trigger" href="index.html" >
             <span class="d-block d-lg-none">Göktuğ Aşcı, MD, MSc</span>
             <span class="d-none d-lg-block"><img class="img-fluid img-profile rounded-circle mx-auto mb-2"
                     src="assets/img/profile.png" alt="" /></span>
