--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
                     <span class="text-danger"> MSc</span>
                 </div>
 
-                <div class="subheading mb-3 d-print-inline d-none" style="font-size:25px">
+                <div class="subheading mb-3 d-print-inline d-block d-lg-none" style="font-size:25px">
                     <span style="color:black">Göktuğ Aşcı,</span>
                     <span class="text-danger"> MD,</span>
                     <span class="text-danger"> MSc</span>
@@ -164,7 +164,7 @@
                         automate and improve healthcare services by utilizing big data and machine learning
                         technologies.</strong>
                 </p>
-                <div class="social-icons text-center d-print-none">
+                <div class="social-icons text-center d-lg-none d-print-none">
                     <a class="social-icon shadow" href="mailto:drgoktugasci@gmail.com"><i
                             class="fas fa-envelope"></i></a>
                     <a class="social-icon shadow" href="https://www.linkedin.com/in/gokasci/" target="_blank"><i
@@ -173,8 +173,15 @@
                             class="fab fa-github"></i></a>
                     <!-- <a class="social-icon shadow" href="https://scholar.google.com/citations?user=TxmhXEwAAAAJ&hl=en" target="_blank"><i class="ai ai-google-scholar" style="font-size:1.5em"></i></a> -->
                 </div>
+                <div class="social-icons d-print-none d-none d-lg-block">
+                    <a class="social-icon shadow" href="mailto:drgoktugasci@gmail.com"><i class="fas fa-envelope"></i></a>
+                    <a class="social-icon shadow" href="https://www.linkedin.com/in/gokasci/" target="_blank"><i
+                            class="fab fa-linkedin-in"></i></a>
+                    <a class="social-icon shadow" href="https://github.com/gasci" target="_blank"><i class="fab fa-github"></i></a>
+                    <!-- <a class="social-icon shadow" href="https://scholar.google.com/citations?user=TxmhXEwAAAAJ&hl=en" target="_blank"><i class="ai ai-google-scholar" style="font-size:1.5em"></i></a> -->
+                </div>
 
-                <div class="subheading mb-3 d-print-inline d-none" style="font-size:20px">
+                <div class="subheading d-print-inline d-none" style="font-size:20px">
                     <u>Linkedin:</u> gokasci | <u>GitHub:</u> gasci | <u>Website:</u> drgoktugasci.com | <u>E-mail:</u> drgoktugasci@gmail.com
                 </div>
             </div>
