--- a/index.html
+++ b/index.html
@@ -182,7 +182,7 @@
                 </div>
 
                 <div class="subheading d-print-inline d-none" style="font-size:20px">
-                    <u>Linkedin:</u> gokasci | <u>GitHub:</u> gasci | <u>Website:</u> drgoktugasci.com | <u>E-mail:</u> drgoktugasci@gmail.com
+                    <u>Linkedin:</u> <a href="https://www.linkedin.com/in/gokasci/">gokasci</a> | <u>GitHub:</u> <a href="https://github.com/gasci">gasci</a> | <u>Website:</u> <a href="https://drgoktugasci.com/">drgoktugasci.com</a> | <u>E-mail:</u> <a href="mailto:drgoktugasci@gmail.com">drgoktugasci@gmail.com</a>
                 </div>
             </div>
         </section>
