--- a/index.html
+++ b/index.html
@@ -116,10 +116,10 @@
                     <a class="nav-link js-scroll-trigger" href="#experience">Experience</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link js-scroll-trigger" href="#languages">Languages</a>
+                    <a class="nav-link js-scroll-trigger" href="#education">Education</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link js-scroll-trigger" href="#education">Education</a>
+                    <a class="nav-link js-scroll-trigger" href="#languages">Languages</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link js-scroll-trigger" href="#skills">Skills</a>
@@ -379,26 +379,6 @@
             </div>
         </section>
 
-        <!-- Languages-->
-        <section class="resume-section light-background" id="languages">
-            <div class="resume-section-content">
-                <h3 class="section-header"><u>Languages</u></h3>
-                <div class="row">
-                    <div class="col-xl">
-                        <ul>
-                            <li>Turkish | Native/Bilingual Proficiency (C2)</li>
-                            <li>
-                                English | Native/Bilingual Proficiency (C2)
-                            </li>
-                            <li>
-                                German | Elementary Proficiency (A2)
-                            </li>
-                        </ul>
-                    </div>
-                </div>
-            </div>
-        </section>
-
         <!-- Education-->
         <section class="resume-section light-background" id="education">
             <div class="resume-section-content">
@@ -490,6 +470,26 @@
                     <div class="flex-shrink-0 text-right">
                         <span class="text-primary font-weight-bold">Kocaeli, Turkey</span><br />
                         <span class="text-primary">September 2009 - July 2014</span>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <!-- Languages-->
+        <section class="resume-section light-background" id="languages">
+            <div class="resume-section-content">
+                <h3 class="section-header"><u>Languages</u></h3>
+                <div class="row">
+                    <div class="col-xl">
+                        <ul>
+                            <li><b>Turkish:</b> Native/Bilingual Proficiency (C2)</li>
+                            <li>
+                                <b>English:</b> Native/Bilingual Proficiency (C2)
+                            </li>
+                            <li>
+                                <b>German:</b> Elementary Proficiency (A2)
+                            </li>
+                        </ul>
                     </div>
                 </div>
             </div>
