--- a/index.html
+++ b/index.html
@@ -191,7 +191,7 @@
         <section class="resume-section" id="experience">
             <div class="resume-section-content">
                 <h3 class="section-header"><u>Experience</u></h3>
-                <div class="d-flex flex-column flex-md-row justify-content-between mb-3">
+                <div class="d-flex flex-column flex-md-row justify-content-between mb-4">
                     <div class="flex-grow-1">
                         <h4 class="mb-0">
                             Senior Data Engineer
@@ -217,7 +217,7 @@
                         <span class="text-primary">July 2022 - Present</span>
                     </div>
                 </div>
-                <div class="d-flex flex-column flex-md-row justify-content-between mb-3">
+                <div class="d-flex flex-column flex-md-row justify-content-between mb-4">
                     <div class="flex-grow-1">
                         <h4 class="mb-0">
                             Data Engineer
@@ -250,7 +250,7 @@
                         <span class="text-primary">September 2021 - July 2022</span>
                     </div>
                 </div>
-                <div class="d-flex flex-column flex-md-row justify-content-between mb-3">
+                <div class="d-flex flex-column flex-md-row justify-content-between mb-4">
                     <div class="flex-grow-1">
                         <h4 class="mb-0">
                             Co-Founder, Product Manager, Full-Stack Developer
@@ -281,7 +281,7 @@
                         <span class="text-primary">June 2020 - September 2021</span>
                     </div>
                 </div>
-                <div class="d-flex flex-column flex-md-row justify-content-between mb-3 d-print-none">
+                <div class="d-flex flex-column flex-md-row justify-content-between mb-4 d-print-none">
                     <div class="flex-grow-1">
                         <h4 class="mb-0">Investment Analyst Intern</h4>
                         <div class="subheading mb-3">
@@ -304,7 +304,7 @@
                         <span class="text-primary">December 2020 - January 2022</span>
                     </div>
                 </div>
-                <div class="d-flex flex-column flex-md-row justify-content-between mb-3 d-print-none">
+                <div class="d-flex flex-column flex-md-row justify-content-between mb-4 d-print-none">
                     <div class="flex-grow-1">
                         <h4 class="mb-0">Medical Intern</h4>
                         <div class="subheading mb-3">
@@ -325,7 +325,7 @@
                         <span class="text-primary">August 2019 - July 2020</span>
                     </div>
                 </div>
-                <div class="d-flex flex-column flex-md-row justify-content-between mb-3">
+                <div class="d-flex flex-column flex-md-row justify-content-between mb-4">
                     <div class="flex-grow-1">
                         <h4 class="mb-0">
                             Co-Founder, Product Manager, Front-End Developer
@@ -355,7 +355,7 @@
                         <span class="text-primary">November 2019 - October 2020</span>
                     </div>
                 </div>
-                <div class="d-flex flex-column flex-md-row justify-content-between mb-3">
+                <div class="d-flex flex-column flex-md-row justify-content-between mb-4">
                     <div class="flex-grow-1">
                         <h4 class="mb-0">Research Intern</h4>
                         <div class="subheading mb-3">
@@ -383,7 +383,7 @@
         <section class="resume-section light-background" id="education">
             <div class="resume-section-content">
                 <h3 class="section-header"><u>Education</u></h3>
-                <div class="d-flex flex-column flex-md-row justify-content-between mb-3">
+                <div class="d-flex flex-column flex-md-row justify-content-between mb-4">
                     <div class="flex-grow-1">
                         <h4 class="mb-0">IE Business School</h4>
                         <div class="subheading mb-3">
@@ -408,7 +408,7 @@
                         <span class="text-primary">September 2020 - July 2021</span>
                     </div>
                 </div>
-                <div class="d-flex flex-column flex-md-row justify-content-between mb-3">
+                <div class="d-flex flex-column flex-md-row justify-content-between mb-4">
                     <div class="flex-grow-1">
                         <h4 class="mb-0">ISTANBUL UNIVERSITY, FACULTY OF MEDICINE</h4>
                         <div class="subheading mb-3">
@@ -432,7 +432,7 @@
                         <span class="text-primary">September 2014 - July 2020</span>
                     </div>
                 </div>
-                <div class="d-flex flex-column flex-md-row justify-content-between mb-3">
+                <div class="d-flex flex-column flex-md-row justify-content-between mb-4">
                     <div class="flex-grow-1">
                         <h4 class="mb-0">
                             THE UNIVERSITY OF ANTWERP, SCHOOL OF MEDICINE
@@ -453,9 +453,9 @@
                         <span class="text-primary">February 2018 - July 2018</span>
                     </div>
                 </div>
-                <div class="d-flex flex-column flex-md-row justify-content-between mb-3">
+                <div class="d-flex flex-column flex-md-row justify-content-between mb-4">
                     <div class="flex-grow-1">
-                        <h4 class="mb-0">TEV İNANÇ HIGH SCHOOL</h4>
+                        <h4 class="mb-0">TEV INANC HIGH SCHOOL</h4>
                         <div class="subheading mb-3">
                             <a href="https://tevitol.k12.tr/" target="_blank" class="text-danger">A
                                 Privately Funded High School for Gifted Students&nbsp;<i class="fas fa-link"></i>
