--- a/index.html
+++ b/index.html
@@ -506,12 +506,12 @@
 
                         <h6 class="mt-3">Data Science & Big Data</h6>
                         <ul>
-                            <li>Apache Airflow | Apache Spark (PySpark) | Apache Kafka (Python) | dbt | Keras | scikit-learn | pandas | Seaborn | Matplotlib | NumPy | Tableau</li>
+                            <li>Apache Airflow | Apache Spark (PySpark) | Airbyte |  Apache Kafka (Python) | dbt | Data Modeling | Keras | scikit-learn | pandas | Seaborn | Matplotlib | NumPy | Tableau</li>
                         </ul>
 
                         <h6>Back-End Development & DevOps</h6>
                         <ul>
-                            <li>Python | SQL | Bash Scripting | AWS S3, RDS, EC2, ECS, Lambda | GitHub Actions | MongoDB | PostgreSQL | Django | Flask | pytest | Docker | Kubernetes | Django Rest Framework | Heroku</li>
+                            <li>Python | SQL | Bash Scripting | AWS S3, RDS, EC2, ECS, EKS, Lambda | GitHub Actions | MongoDB | PostgreSQL | Django | Flask | pytest | Docker | Kubernetes | Django Rest Framework | Heroku</li>
                         </ul>
 
                         <h6>Front-End Development</h6>
