--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
                     <span class="text-danger"> MSc</span>
                 </div>
 
-                <div class="subheading mb-3 d-print-inline d-block d-lg-none" style="font-size:25px">
+                <div class="subheading mb-3 d-print-inline d-none" style="font-size:25px">
                     <span style="color:black">Göktuğ Aşcı,</span>
                     <span class="text-danger"> MD,</span>
                     <span class="text-danger"> MSc</span>
@@ -779,6 +779,11 @@
 
                 <h5 class="text-warning mt-4">Publications</h5>
                 <ul class="fa-ul mb-0">
+                    <li class="mb-2">
+                        <a href="https://img1.wsimg.com/blobby/go/18b3d75e-e099-4577-a0b2-00756e97dcc4/downloads/Incidental%20pulmonary%20findings%20on%20chest%20compute.pdf?ver=1658984737208" target="_blank" class="text-danger">
+                            <span class="fa-li"><i class="fas fa-book text-warning"></i></span>Incidental pulmonary findings on chest computed tomography scans of 3010 non-COVID patients in Istanbul&nbsp;<i class="fas fa-link"></i>
+                        </a>
+                    </li>
                     <li class="mb-2">
                         <a href="https://link.springer.com/article/10.1007/s00406-018-0948-5" target="_blank"
                             class="text-danger">
