--- a/index.html
+++ b/index.html
@@ -506,7 +506,7 @@
 
                         <h6 class="mt-3">Data Science & Big Data</h6>
                         <ul>
-                            <li>Apache Airflow | Apache Spark (PySpark) | Airbyte |  Apache Kafka (Python) | dbt | Data Modeling | Keras | scikit-learn | pandas | Seaborn | Matplotlib | NumPy | Tableau</li>
+                            <li>Apache Airflow | Apache Spark (PySpark) | Airbyte |  Apache Kafka (Python) | dbt | Data Modeling | Snowflake | Keras | scikit-learn | pandas | Metabase | Tableau</li>
                         </ul>
 
                         <h6>Back-End Development & DevOps</h6>
