--- a/index.html
+++ b/index.html
@@ -213,7 +213,7 @@
                         </ul>
                     </div>
                     <div class="flex-shrink-0 text-right">
-                        <span class="text-primary font-weight-bold">Munich, Germany</span><br />
+                        <span class="text-primary font-weight-bold">Berlin, Germany</span><br />
                         <span class="text-primary">July 2022 - Present</span>
                     </div>
                 </div>
